3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

common/object.c
include/define.h
include/player.h
include/sproto.h
server/attack.c
server/c_object.c
server/player.c
server/shop.c
socket/item.c
socket/loop.c
socket/request.c: Remove explicit calls to
    esrv_update_item(UPD_WEIGHT, pl, pl) for player objects. Instead
    send the new weight whenever it changes.
Andreas Kirschbaum 2004-06-13

server/spell_attack.c: cast_destruction() - have it change the skill
   for the caster so that exp is properly awarded.
common/object.c: insert_map_in_ob() - remove CAN_MERGE checks after the
    map translation - otherwise, we can have bogus coordinates
    that are used for GET_MAP_OB.
random_maps/style.c: pick_random_object() - have it return null object
    (and probably crash) instead of getting into an infinite loop.
server/c_wiz.c: command_kick() - check FLAG_FREED of player.  Remove all
    the broken skill/exp object granting code in command_possess() - this
    is probably still a broken function.
common/item.c: describe_monster() - if the creature/player is stealthy,
    mention it when the object is described.
common/loader.l, loader.c: Fix passed in size to get_ob_diff() - was one
    to long, causing string corruption.
server/spell_attack.c: mood_change() - fix get_map_ob call - wasn't using
    correct coordinate variables, resulting in crash.
MSW 2004-06-10

server/c_party.c: gsay improvements, courtesy Katia.
Ryo 2004-06-09

server/commands.c: Disable 'possess', that crashes server.
server/monster.c: Make monsters use wands/horns/... again. Also make'em
   ignore DMs all the time (even when not invisible).